Try to fix circleci build

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ retroProject {
     libDirs = [".ra/deps/c128lib"]
     srcDirs = ["lib"]
 
-    viceExecutable = 'x128.exe'
+    viceExecutable = 'x128'
 
     libFromGitHub "c128lib/128spec", "0.7.2"
 }
